[package]
name = "request_handlers"
version = "0.1.0"
edition = "2021"
authors = ["James Dean"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
log = "0.4"

config = { path = "../common/config" }